# cloudwalk-challenge

./: .env.example  .gitignore  Cargo.toml  Dockerfile  GEMINI.md  README.md  TECHNICAL.md  TODO.md
.github/workflows/: ci.yml
eth_client/: Cargo.toml
eth_client/src/: lib.rs
indexer/: Cargo.toml
indexer/src/: main.rs
migrations/2025-07-09-195509_create_tables/: down.sql  up.sql
migrations/2025-07-11-055506_create_balances_and_receipts_tables/: up.sql
src/: main.rs
src/api/: handlers.rs  mod.rs  models.rs
src/db/: mod.rs  models.rs  schema.rs
src/eth_client/: mod.rs  parser_log.rs  parser_receipt.rs  types.rs  update_balances.rs
src/eth_client/contracts/: erc20.rs
src/indexer/: mod.rs
src/types/: mod.rs
