[package]
name = "blockchain-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1.0.19", features = ["full"] }
alloy-provider = { version = "1.0.19" }
alloy-rpc-types-eth = "1.0.19"
anyhow = "1.0.98"
axum = "0.8.4"
dotenvy = "0.15.7"
diesel = { version = "2.2.11", features = ["sqlite"] }
futures-util = "0.3.31"
hex = "0.4.3"
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
# tokio-stream = "0.1"


[dev-dependencies]
diesel_migrations = { version = "2.2.0" }
