[package]
name = "blockchain-indexer"
version = "0.1.0"
edition = "2024"
authors = ["Rodrigo Bronzelle"]
description = "Blockchain Indexer"
repository = "https://github.com/bronzelle/cloudwalk-challenge.git"

[features]
profiling = ["dep:pprof", "dep:chrono"]

[dependencies]
alloy = { version = "1.0.19", features = ["full"] }
alloy-contract = { version = "1.0.19" }
alloy-provider = { version = "1.0.19" }
alloy-sol-types = { version = "1.0.19" }
alloy-rpc-types-eth = "1.0.19"
anyhow = "1.0.98"
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"], optional = true }
dotenvy = "0.15.7"
diesel = { version = "2.2.11", features = ["sqlite"] }
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
pprof = { version = "0.13", features = ["flamegraph"], optional = true }
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


[dev-dependencies]
diesel_migrations = { version = "2.2.0" }
reqwest = "0.12.22"
